# sv_training

./: CMakeLists.txt  CMakeLists_az.txt  CMakePresets.json  README.md  arm-none-eabi-toolchain.cmake
APP/: README.md  main.c
APP/uart_interrupt/: CMakeLists.txt
BSP/: README.md  bsp.c
BSP/startup/: linker_stm32G0B1.ld  stm32f411re_startup.s
PHY/drivers/: README.md
UTILS/: README.md
app/: CMakeLists.txt  main.c  uart_hello.c
app/gpio_toggle/: CMakeLists.txt  main.c
app/led_toggle/: CMakeLists.txt
app/uart_interrupt/: main.c
app/uart_poll/: CMakeLists.txt  main.c
bsp/: CMakeLists.txt  README.md  bsp.h
bsp/boards/nucleo_f411re/: board_config.h  linker.ld  startup.s  system_stm32f4xx.c
bsp/boards/nucleo_g0b1re/: board_config.h  linker.ld
bsp/startup/: README.md  startup_stm32G0B1.c  stm32f411re_linker_script.ld
drivers/: CMakeLists.txt  README.md  hal_uart.h  hal_uart_config.h
drivers/config/: hal_gpio_config.h
drivers/inc/: hal_gpio.h
drivers/src/: hal_uart_stm32f411.c
drivers/stm32g0/: CMakeLists.txt
hal/: CMakeLists.txt  README.md
hal/drivers/: CMakeLists.txt
hal/drivers/CMSIS/Device/ST/STM32G0xx/Include/: stm32g0b1xx.h  stm32g0xx.h
hal/drivers/inc/: driver_gpio.h  driver_rcc.h  driver_uart.h  hal_clock.h
hal/drivers/src/: hal_clock_stm32G0B1.c  stm32G0B1_gpio.c
hal/drivers/stm32f4/: CMakeLists.txt  gpio_stm32f4.c  rcc_stm32f4.c  uart_stm32f4.c
hal/drivers/stm32g0/: CMakeLists.txt  gpio_stm32g0.c  rcc_stm32g0.c  uart_stm32g0.c
hal/inc/: hal_common.h  hal_gpio.h  hal_rcc.h  hal_uart.h
hal/requirements/: GPIO.md  RCC.md  TIMER.md  UART.md
hal/src/: hal_common.c  hal_gpio.c  hal_rcc.c  hal_timer.c  hal_uart.c
hal/test_app/gpio/: bsp_stm32g0.h  main.c
hal/testapp/clock/: bsp_clock.h
hal/testapp/gpio/: bsp_stm32g0.h  main.c
hal/testapp/uart/: bsp_stm32g0.h  main.c
